--- a/style.css
+++ b/style.css
@@ -4,7 +4,16 @@
     background-color: aqua;
 }
 .inner{
-    height: 300px;
-    width: 300px;
+    height: 100px;
+    width: 100px;
     background-color: blue;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+.super{
+    height: 2000px;
+    width: 1000px;
+    background-color: gray;
+    position: absolute;
 }
