--- a/style.css
+++ b/style.css
@@ -2,14 +2,15 @@
     height: 500px;
     width: 500px;
     background-color: aqua;
+    position: absolute;
 }
 .inner{
     height: 100px;
     width: 100px;
     background-color: blue;
-    position: sticky;
-    top: 0;
-    left: 0;
+    position: fixed;
+    top:0;
+
 }
 .super{
     height: 2000px;
